# src/validator_services/swagger.yaml
@@ -148,6 +148,29 @@ paths:
           description: Forbidden
         '404':
           description: Not found
+  '/admin/nodes':
+    get:
+      tags:
+        - Nodes
+      summary: Get list nodes (for Admin)
+      parameters:
+        - name: project_id
+          in: query
+          description: project_id
+          type: string
+        - name: offset
+          in: query
+          description: offset
+          type: integer
+        - name: limit
+          in: query
+          description: limit
+          type: integer
+      responses:
+        '200':
+          description: Success
+          schema:
+            $ref: '#/definitions/NodesSuccessRes'
   '/nodes':
     get:
       tags:
